# folder-differ

./: .gitignore  Cargo.toml  README.md
src/: diff.rs  hash.rs  lib.rs  main.rs  progress.rs  sync.rs
tests/: integration_diff.rs
