[package]
name = "folder-differ"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"
blake3 = "1.5"
ignore = "0.4"
rustc-hash = "1.1"
num_cpus = "1.16"
jwalk = "0.8"
ctrlc = "3.4.7"
thiserror = "2.0.12"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"

# Optional dependencies
indicatif = { version = "0.17", optional = true }

[features]
default = ["progress"]
progress = ["indicatif"]
benchmarking = []
sync = []

[profile.release]
opt-level = 3     # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dev-dependencies]
tempfile = "3.20.0"
